--- a/index.html
+++ b/index.html
@@ -11,9 +11,14 @@
         <link rel="stylesheet" href="index.css">
     </head>
     <body>
-        <h1 class="white">Generate a</h1>
-        <h1 class="green">random password</h1>
-        <p> Never use an insecure password again </p>
-        <script src="index.js"></script>
+        <div class="title">
+            <h1 class="white">Generate a</h1>
+            <h1 class="green">random password</h1>
+            <p> Never use an insecure password again </p>
+        </div>
+        <div class="button">
+            <button type="button">Generate Passwords</button>
+            <script src="index.js"></script>
+        </div>
     </body>
 </html>
