Added password boxes

--- a/index.html
+++ b/index.html
@@ -17,9 +17,13 @@
             <p> Never use an insecure password again </p>
         </div>
         <div class="button">
-            <button type="button">Generate Passwords</button>
+            <button onclick="generatePassword()">Generate Passwords</button>
             <script src="index.js"></script>
         </div>
         <hr>
+        <div class="container">
+            <div id="pass1" class="password"></div>
+            <div id="pass2" class="password"></div>
+        </div>
     </body>
 </html>
