--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
         </div>
         <div class="button">
             <button onclick="generatePassword()">Generate Passwords</button>
-            <script src="index.js"></script>
         </div>
         <hr>
         <div class="container">
-            <div id="pass1" class="password"></div>
-            <div id="pass2" class="password"></div>
+            <div class="password" id="pass1"></div>
+            <div class="password" id="pass2"></div>
         </div>
+        <script src="index.js"></script>
     </body>
 </html>
